--- a/styles.css
+++ b/styles.css
@@ -235,3 +235,63 @@
     .content-descarga i{
         margin-left: 5px;
     }
+
+    /*estilos del formulario*/
+    .main {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+      }
+
+    form {
+        text-align: center;
+        width: 90%;
+        background-color: #efefef;
+        padding: 20px;
+        color: #fff;
+        border-radius: 20px;
+      }
+      form input::placeholder {
+        width: 15em;
+        margin: 3px;
+        height: 2em;
+        color: #6c757d;
+      }
+      form .btn {
+        margin: 2em 1em;
+        width: 60%;
+        height: 40px;
+        text-transform: uppercase;
+        color: #fff;
+        letter-spacing: 2px;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+      }
+      .icons {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 1em;
+      
+      }
+      .fas {
+        font-size: 2.5em;  
+        border-radius: 50%;
+        padding: 40px;
+      
+      }
+
+      
+      .container-data {
+        display: flex;
+        justify-content: space-around;
+        margin-top: -1em;
+      }
+      
+      .container-data h6 {
+        text-align: center;
+      }
