--- a/styles.css
+++ b/styles.css
@@ -1,297 +1,220 @@
-*{
-    box-sizing: border-box;
+body{
+    background-color: #eeeeee;
+    position: relative;
+}
+
+.header{
+    width: 100%;
+    height: 95vh;
+    background-image: linear-gradient(180deg, #434e52, #009cfd41 100%), url(https://res.cloudinary.com/pixel-direction/image/upload/v1669786048/Cv./1ala62_swlhmz.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    overflow: hidden;
+}
+
+.bg-dark{
+    background-color: #393e46 !important;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+}
+
+.bg-dark1{
+    background-color: #393e46;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    border-bottom: 2px solid #fdbb2d;
+}
+
+@media (min-width: 768px){
+    .bg-dark{
+        background-color: transparent !important;
+    }
+}
+
+.navbar a{
+    color: #fff !important;
+    font-family: 'MuseoModerno';
+    text-align: center;
+    font-size: 23px;
+    padding: 4px 15px;
+}
+
+.navbar a:hover{
+    background: linear-gradient(160deg, #22c2c3 0%, #fdbb2d 100%);
+    border-radius: 5%;
+}
+
+.Text-hero{
+    height: 550px;
+    color: #fff;
+    font-family: 'Rajdhani';
+    padding-top: 190px;
+}
+
+.Text-hero h3,h5{
+    font-size: 70px;
+    letter-spacing: .2em;
+    /*font-weight: bold;*/
+    display: flex;
+}
+
+@media (max-width: 500px){
+    .Text-hero h3,h5{
+        font-size: 47px;
+    }
+}
+
+.Text-hero a{
+    font-family: 'Montserrat';
+    color: #fff;
+    font-size: 23px;
+    padding: 5px 10px;
+    text-decoration: none;
+    border-radius: 5px;
+    background: linear-gradient(160deg, #22c2c3 0%, #fdbb2d 100%);
+}
+
+.Text-hero a:hover{
+    background: linear-gradient(160deg, #22c2c3 0%, #fdbb2d 100%);
+}
+
+.svg-hero{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+/*FIN DEL HEAD*/
+
+.Perfil{
+    background-color: #e8e4e1;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    text-align: center;
+}
+
+.Perfil h1{
+    font-family: 'MuseoModerno';
+    font-size: 50px;
+    padding-bottom: 13px;
+}
+
+.Perfil h3{
+    font-family: 'Rajdhani';
+    font-size: 35px;
+    padding-bottom: 13px;
+    letter-spacing: 7px;
+}
+
+.Perfil p{
+    font-family: 'Montserrat';
+    font-size: 22px;
+    font-weight: 500;
+}
+
+/*AQUÍ TERMINA PERFIL*/
+
+.Proyect{
+    padding-top: 80px;
+    padding-bottom: 80px;
+    color: #f5f5f5;
+    background-color: #393e46;
+}
+
+.Proyect h2{
+    font-family: 'MuseoModerno';
+    font-size: 50px;
+    padding-bottom: 7px;
+}
+
+.Proyect h4{
+    font-family: 'Montserrat';
+    font-size: 22px;
+    font-weight: 500;
+    padding-bottom: 10px;
+}
+
+.Proyect .col-lg-4{
+    margin: 0 !important;
+    padding: 3px;
+    transition: 0.2s linear;
+}
+
+.Proyect .col-lg-4:hover{
+    transform: scale(1.05);
+    transition: 0.2s linear;
+    z-index: 1;
+}
+
+.Proyect .row img{
+    width: 100%;
+    height: 370px;
+}
+
+/*AQUI TERMINA PROYECTOS*/
+
+.Contacto{
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.Contacto h1{
+    font-family: 'MuseoModerno';
+    font-size: 50px;
+    padding-bottom: 15px;
+}
+
+.Contacto input{
+    margin-bottom: 23px;
+    border: none;
+    border-radius: 0;
+    box-shadow: none !important;
+    border-bottom: 1px solid #313848;
+    margin-right: 10px;
+}
+
+.Contacto textarea{
+    margin-bottom: 13px;
+    border: none;
+    border-bottom: 1px solid #313848;
+    box-shadow: none !important;
+    min-height: 150px;
+    max-height: 150px;
+    width: 100%;
+    resize: vertical;
+}
+
+.Contacto a{
+    color: #fff;
+    font-family: 'Montserrat';
+    font-size: 20px;
+    padding: 4px 15px;
+    text-align: center;
+    background: linear-gradient(160deg, #22c2c3 0%, #fdbb2d 100%);
+    text-decoration: none;
+}
+
+.Contacto a:hover{
+    background: linear-gradient(160deg, #22c2c3 0%, #fdbb2d 100%);
+}
+
+/*AQUÍ TERMINA CONTACTO*/
+
+.Foot{
+    background: linear-gradient(160deg, #22c2c3 0%, #fdbb2d 100%);
+}
+
+.Foot h4{
+    font-family: 'MuseoModerno';
+    padding: 10px;
+    font-size: 27px;
+    font-weight: 900;
     margin: 0;
-    padding: 0;
-   }
-   
-   body {
-    background-color: #DFDBE5;
-    background-image: url("https://res.cloudinary.com/pixel-direction/image/upload/v1662004313/Cv./watercolor-abstract-purple-background_23-2149120778_gmdpws.webp");
-       /*background-repeat: repeat-x;*/
-       background-position: right center;
-       background-attachment: fixed;
-       color:black;
-      
-       } 
-   
-   a{
-       color:black;
-       text-decoration: none;
-   }
-   
-   ul {
-       list-style: none;
-   }
-   
-   
-   /* NAVIGATION */
- 
-   
-   .tamañofoto {
-       width: 700px;
-   }
-   
-   .foto {
-       display: flex;
-       justify-content: center
-      
-   }
-   .ct{
-       text-align: center;
-   }
-   .subtitle{
-       text-align: center;
-   } 
-   /*REDES*/
-        .social{
-        margin: 50px;
-
-        }
-        .social p {
-        text-align: center;
-        font-size: 40px;
-        margin-bottom: 20px;
-        }
-
-        .links { 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .links a {
-            margin: 0 30px;
-        }
-        .links a i {
-            font-size: 3rem;
-
-        }
-        .footer-container {
-            display: grid;
-        }
-        .biografia {
-            display: flex;
-            align-items: center;
-        }
-       .footer-links {
-           
-           background: hsl(280, 17%, 38%);
-           color: rgb(255, 255, 255);
-           font-size: 12px;
-           padding: 35px 0;
-   
-       }
-
-       /*NAV YOUTUBE*/
-
-       *{
-        padding: 0;
-        margin: 0;
-        text-decoration: none;
-        list-style: none;
-        box-sizing: border-box;
-        
-    
-    }
-    
-    nav{
-        background: hsl(280, 17%, 38%);
-        height: 80px;
-        width: 100%;
-    }
-    .enlace{
-        position: absolute;
-        padding: 20px 50px;
-    }
-    .logo{
-        height: 40px;
-    }
-    nav ul{
-        float: right;
-        margin-right: 20px;
-    }
-    nav ul li{
-        display: inline-block;
-        line-height: 80px;
-        margin: 0 5px;
-    }
-    nav ul li a{
-        color: #fff;
-        font-size: 18px;
-        padding: 7px 13px;
-        border-radius: 3px;
-        text-transform: uppercase;
-    }
-    li a.active, li a:hover{
-        background: #2e2334;
-        transition: .5s;
-        color: #b48dc7;
-    }
-    .checkbtn{
-        font-size: 30px;
-        color: #fff;
-        float: right;
-        line-height: 80px;
-        margin-right: 40px;
-        cursor: pointer;
-        display: none;
-        
-    }
-    #check{
-        display: none;
-    }
-    section{
-        background: url(fondo.jpg) no-repeat;
-        background-size: cover;
-        background-position: center center;
-        height: calc(100vh - 80px);
-    }
-    
-    @media (max-width: 952px){
-        .enlace{
-            padding-left: 20px;
-        }
-        nav ul li a{
-            font-size: 16px;
-        }
-    }
-    
-    @media (max-width: 858px){
-        .checkbtn{
-            display: block;
-        }
-        ul{
-            position: fixed;
-            width: 100%;
-            height: 100vh;
-            background: #b48dc7;
-            top: 80px;
-            left: -100%;
-            text-align: center;
-            transition: all .5s;
-        }
-        nav ul li{
-            display: block;
-            margin: 50px 0;
-            line-height: 30px;
-        }
-        nav ul li a{
-            font-size: 20px;
-        }
-        li a:hover, li a.active{
-            background: none;
-            color: #2e2334;
-        }
-        #check:checked ~ ul{
-            left:0;
-        }
-    }
-/*Mis Proyectos*/
-    .card {
-        display: inline-block;
-        margin: 20px;
-        left: 170px;
-    }
-    .conteiner {
-        overflow: hidden;
-        
-    }
-    /*CONOCEME*/
-  
-    .content-descarga{
-        width: 100%;
-        max-width: 300px;
-        margin: 20px;
-        padding: 20px;
-        background: #b48dc7;
-        text-align: center;
-        border: 2px solid #2e2334;
-    }
-    .descarga-ahora{
-        display: inline-block;
-        text-decoration: none;
-        padding: 15px 20px;
-        background: #2e2334;
-        color: #b48dc7;
-        border-radius: 5px;
-    }
-    .descarga-ahora:hover{
-        opacity: 0.9;
-    }
-    .btn-descarga{
-        display: inline-block;
-        padding: 15px 25px;
-        background: #2e2334;
-        color: #b48dc7;
-        border:none;
-        font-size: 16px;
-        margin-top: 20px;
-        border-radius: 5px;
-        outline: 0px;
-        cursor: pointer;
-    }
-    .btn-descarga:hover{
-        opacity: 0.9;
-    }
-    .content-descarga i{
-        margin-left: 5px;
-    }
-
-    /*estilos del formulario*/
-    .main {
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-      }
-
-    form {
-        text-align: center;
-        width: 90%;
-        background-color: #efefef;
-        padding: 20px;
-        color: #fff;
-        border-radius: 20px;
-      }
-      form input::placeholder {
-        width: 15em;
-        margin: 3px;
-        height: 2em;
-        color: #6c757d;
-      }
-      form .btn {
-        margin: 2em 1em;
-        width: 60%;
-        height: 40px;
-        text-transform: uppercase;
-        color: #fff;
-        letter-spacing: 2px;
-        border-radius: 20px;
-        border: none;
-        cursor: pointer;
-      }
-      .icons {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        margin-top: 1em;
-      
-      }
-      .fas {
-        font-size: 2.5em;  
-        border-radius: 50%;
-        padding: 40px;
-      
-      }
-
-      
-      .container-data {
-        display: flex;
-        justify-content: space-around;
-        margin-top: -1em;
-      }
-      
-      .container-data h6 {
-        text-align: center;
-      }
+    overflow: hidden;
+}
